fixed a problem with the alternative page not showing the image, and readded text that was missing

--- a/wp-content/themes/SenchiTheme/src/about.scss
+++ b/wp-content/themes/SenchiTheme/src/about.scss
@@ -6,6 +6,15 @@
 
 .About-container {
   width: 63vw;
+  text-align: center;
+}
+
+.About-us-text {
+  width: 43vw;
+  margin: 0 auto;
+  p {
+    margin-bottom: 40px;
+  }
 }
 
 @media screen and (max-width: $mobile) {
