--- a/wp-content/themes/SenchiTheme/src/color.scss
+++ b/wp-content/themes/SenchiTheme/src/color.scss
@@ -11,6 +11,10 @@ $youtube: #ff0000;
 $github: #24292d;
 $reddit: #fe4500;
 
+h3 {
+  color: white;
+}
+
 h1 {
   color: white;
 }
